# librarian

./: .gitignore  CHANGELOG.md  README.md  ROADMAP.md  docker-compose.yml  index.html  package.json  pnpm-lock.yaml  product-vision.md  tailwind.config.js  turbo.json  vite.config.ts
.cursor/: AGENTS.md  README.md
docs/: BIDIRECTIONAL_MIDI_SUMMARY.md  DEVICE_DETECTION_COMPLETE_SOLUTION.md  DISCOVERY_SUCCESS.md  HOLOGRAM_IDENTITY_LIMITATION.md  README.md  TESTING.md  VERIFIED_FINDINGS.md  WIDI_JACK_SOLUTION.md  architecture.md  implementation-summary.md  pedal-integration-checklist.md  phase-1-completion.md
research/: 01-desktop-frameworks.md  02-midi-libraries.md  03-storage-options.md  04-ui-frameworks.md  README.md  tauri-vs-electron-comparison.md  technical-proposal.md
scripts/: release.sh  (+1 more)
src/: App.tsx
tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json  tauri.macos.conf.json
tauri/src/: commands.rs  lib.rs
tauri/src/midi/: manager.rs  mod.rs
tauri/src/midi/pedals/: gen_loss_mkii.rs  microcosm.rs  mod.rs
tauri/src/midi/pedals/billy_strings_wombtone/: mapper.rs
tauri/src/midi/pedals/brothers_am/: mapper.rs  mod.rs
tauri/src/midi/pedals/chroma_console/: mapper.rs  mod.rs  types.rs
tauri/src/midi/pedals/clean/: mapper.rs  mod.rs
tauri/src/midi/pedals/cxm1978/: commands.rs  mod.rs  types.rs
tauri/src/midi/pedals/gen_loss_mkii/: commands.rs  mapper.rs  mod.rs  types.rs
tauri/src/midi/pedals/lossy/: mapper.rs
tauri/src/midi/pedals/microcosm/: commands.rs  mapper.rs  mod.rs  types.rs
tauri/src/midi/pedals/onward/: commands.rs  mapper.rs  types.rs
tauri/src/midi/pedals/preamp_mk2/: mapper.rs  mod.rs  types.rs
tauri/src/midi/pedals/reverse_mode_c/: commands.rs  mod.rs  types.rs
tauri/src/presets/: bank_config.rs  bank_tracker.rs  mod.rs  repository.rs  types.rs
tauri/src/test_utils/: builders.rs  mock_midi.rs
tauri/tests/: preset_repository_test.rs
(+377 files in other folders)
