[package]
name = "librarian"
version = "0.1.0"
description = "A cross-platform editor and librarian for modern boutique pedals"
authors = ["you"]
edition = "2021"

[lib]
name = "librarian_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[[bin]]
name = "librarian"
path = "src/main.rs"

[[bin]]
name = "test-midi-detection"
path = "src/bin/test-midi-detection.rs"

[build-dependencies]
tauri-build = { version = "~2.5", features = [] }

[dependencies]
tauri = { version = "~2.10", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
midir = "0.9"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-shell = "2"
